# stress_detection

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: feature_pipeline.yml  training_pipeline.yml
src/stress_detection/: __init__.py  main.py  orchestrator.py
src/stress_detection/conf/: feature_config.yaml  inference_config.yaml  training_config.yaml
src/stress_detection/feature_store/: feature_definition.py  feature_store.yaml
src/stress_detection/feature_store/data/: registry.db  testing_data.parquet  training_data.parquet
src/stress_detection/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/stress_detection/scripts/: data_loader.py  infer.py  trainer.py  utils.py
