[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stress_detection"]

[project]
name = "stress-detection"
version = "0.1.0"
description = "Minimal MLOps"
authors = [
    {name = "Harish", email = "gehloth03@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.13",
    "feast[redis]>=0.49.0",
    "ibis-framework[duckdb]>=10.5.0",
    "ibis-ml>=0.1.3",
    "metaflow>=2.15.18",
    "mlflow>=3.1.0",
    "omegaconf>=2.3.0",
    "polars>=1.31.0",
    "pyarrow-hotfix>=0.7",
    "scikit-learn>=1.7.0",
    "supabase>=2.15.3",
    "uvicorn>=0.34.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "mypy",
    "pre-commit",
    "jupyter",
    "ipykernel",
    "notebook",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
]
